# jaxscape

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  drawing.tiff  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build_docs.yml  release.yml  run_tests.yml
_static/: custom_css.css
api/connectivity_analysis/: index.html
api/distances/: index.html
api/graphs/: index.html
api/linear_solvers/: index.html
api/solvers/: index.html
api/window_operations/: index.html
benchmark/: __init__.py  benchmark2_moving_window_lcp_distance.py  benchmark_AMGSolver.py  benchmark_LCPDistance_memory.py  benchmark_ResistanceDistance_memory.py  benchmark_adjacency.py  benchmark_distances.py  benchmark_distances_time.py  benchmark_lcp_distance.py  benchmark_lcp_distance_bellman_ford.py  benchmark_lcp_distance_floyd_warshall.py  benchmark_moving_window_euclidean_distance.py  benchmark_moving_window_lcp_distance.py  benchmark_moving_window_resistance_distance.py  benchmark_resistance_distance.py  euclidean_distance.py  install_external_tools.sh  lcp_distance.py  moving_window_benchmark.py  render_scorecard.py  resistance_distance.py  rsp_distance.py  run_benchmarks.sh  run_sensitivity_analysis.py  single_window_sensitity_analysis.py  single_window_sensitity_analysis2.py  smooth_lcp_distance.py  template_batching.py
benchmark/mwe/: bellman_ford.py  bellman_ford_OOM.py  bellman_ford_differentiability.py  bellman_ford_logsumexp_differentiability.py  bellman_ford_parallelization.py
benchmark/pyamg/: pyamg_JAX_wrapper.py  pyamg_jax_classical.py  pymag.py
benchmark/results/: benchmark_results.csv  benchmark_results.json
benchmark/results/benchmarks/: benchmark_results.json
docs/: benchmarking.md  index.md  linear_solvers.md
docs/api/: connectivity_analysis.md  distances.md  graphs.md  linear_solvers.md  solvers.md  window_operations.md  windows.md
docs/examples/: connectivity.md  distances.md  sensitivity.md
docs/examples/advanced/: moving_windows.ipynb
docs/examples/connectivity_analysis/: connectivity_analysis.ipynb
docs/examples/distance_calculation/: distance_calculation.ipynb
docs/examples/inverse_landscape_genetics/: inverse_landscape_genetics.ipynb
docs/examples/inverse_problem/: inverse_problem.ipynb
docs/examples/logo/: make_logo.py
docs/getting-started/: installation.md  quickstart.md
examples/: environment.yml  logo.py  permeability.csv  quick_start.py  suitability.tif
examples/advanced/moving_windows/: index.html
examples/connectivity_analysis/connectivity_analysis/: index.html
examples/distance_calculation/distance_calculation/: index.html
examples/experiments/: _test_dR_equals_I2.py  bellman_ford_OOM.py  bellman_ford_differentiability.py  bellman_ford_logsumexp_differentiability.py  bellman_ford_parallelization.py
examples/experiments/jax_queue/: dijkstra.py  pq.py
examples/experiments/pyamg/: batch_mode_indirect_solvers.py  batch_pyamg_asprecond_wrapper.py  bigcstab.py  indirect_solvers.py  lsmr_solvers.py  pyamg_asprecond_wrapper.py  pyamg_asprecond_wrapper_lineax.py  pyamg_jax.py  pyamg_jax_adaptive_smooth_aggregation.py  pyamg_jax_classical.py  pyamg_level_wrapper.py  pyamgx.py  pymag.py
examples/inverse_landscape_genetics/inverse_landscape_genetics/: index.html
examples/inverse_problem/: download_data.jl  inverse_problem.py  inverse_problem_simple.py
examples/logo/: logo.py  logo_raw.tiff  make_logo.py
examples/moving_window/: benchmark_moving_window_euclidean_distance.py  run_sensitivity_analysis.py  template_batching.py  template_batching_eager_it.py  template_pmap.py
examples/moving_windows/: moving_windows.py
examples/omniscape/: omniscape_lcp_distance.py
examples/quick_start/: quick_start.py
examples/sensitivity_analysis/: sensitivity_analysis.py
examples/visualization/: graphs.py
search/: search_index.json
src/connectax/: __init__.py  connectivity.py  distance.py  euclidean_distance.py  gridgraph.py  landscape.py  moving_window.py  rsp_distance.py  utils.py
src/jaxscape/: __init__.py  connectivity_analysis.py  distance.py  euclidean_distance.py  graph.py  gridgraph.py  landmarks.py  landscape.py  lcp_distance.py  linear_solve.py  moving_window.py  rastergraph.py  resistance_distance.py  rsp_distance.py  run.py  sensitivity_analysis.py  smooth_lcp_distance.py  utils.py  window_operation.py  windowed_analysis.py
src/jaxscape/solvers/: __init__.py  _callback.py  cholmodsolver.py  cudsssolver.py  operator.py  pyamgsolver.py
tests/: MWE_lineax.py  _moving_window.py  _test_jax_gmres.py  _test_lineax.py  _test_lineax_2.py  _test_lineax_preconditioner.py  _test_spsolve.py  connectivity.py  lcp_distance.py  requirements.txt  test_benchmark_distances.py  test_cholmod_solver.py  test_connectivity.py  test_connectivity_analysis.py  test_distance.py  test_euclidean_distance.py  test_gridgraph.py  test_landmarks.py  test_landscape.py  test_lcp_distance.py  test_linear_solve.py  test_lineax.py  test_moving_window.py  test_raster.py  test_resistance_distance.py  test_rsp_distance.py  test_run.py  test_sensitivity_analysis.py  test_smooth_lcp_distance.py  test_utils.py  test_window_operation.py
tests/data/: Salmo trutta_conscape_affinity_matrix.csv  Salmo trutta_conscape_rsp_distance.csv  conscape_rsp_distance_to_i=19_j=6.csv  habitat_suitability.csv  habitat_suitability.nc  large_extent_habitat_suitability.nc
