[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxscape"
version = "0.0.6"
description = 'A minimal JAX library for connectivity modelling at scale'
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
keywords = ["jax", "graph", "machine-learning", "network"]
authors = [
  { name = "Victor Boussange", email = "vic.boussange@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: GIS",
  ]
dependencies = [
    "jax>=0.4.38,!=0.7.0,!=0.7.1",
    "equinox>=0.13.2",
    "tqdm",
    "numpy",
    "pyamg>=5.1.0",
    "lineax>=0.0.8",
    "cholespy>=2.1.0",
]

[project.urls]
Documentation = "https://github.com/vboussange/jaxscape#readme"
Issues = "https://github.com/vboussange/jaxscape/issues"
Source = "https://github.com/vboussange/jaxscape"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
]

examples = [
    "matplotlib",
    "rasterio",
    "flax"
]

tests = [
    "networkx>=3.4",
    "pytest>=8.3.5",
]