[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "vic.boussange@gmail.com", name = "Victor Boussange"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
  "jax>=0.4.38,!=0.7.0,!=0.7.1",
  "equinox>=0.13.2",
  "tqdm>=4.66.1",
  "numpy",
  "lineax>=0.0.8"
]
description = 'A minimal JAX library for connectivity modelling at scale'
keywords = ["jax", "graph", "machine-learning", "network"]
license = {file = "LICENSE"}
name = "jaxscape"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.0.6"

[project.optional-dependencies]
cholespy = [
  "cholespy>=2.1.0"
]
dev = [
  "ipykernel>=6.29.5"
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "pymdown-extensions>=10.7.0",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1"
]
examples = [
  "matplotlib",
  "rioxarray",
  "flax",
  "optimistix",
  "geopandas",
  "scikit-learn"
]
pyamg = [
  "pyamg>=5.1.0"
]
solvers = [
  "pyamg>=5.1.0,<5.3.0",
  "cholespy>=2.1.0"
]
tests = [
  "networkx>=3.4",
  "pytest>=8.3.5"
]

[project.urls]
Documentation = "https://github.com/vboussange/jaxscape#readme"
Issues = "https://github.com/vboussange/jaxscape/issues"
Source = "https://github.com/vboussange/jaxscape"

[tool.pyright]
include = ["src", "tests"]
reportIncompatibleMethodOverride = true

# TODO: currently not testing with jaxtyping and beartype
# [tool.pytest.ini_options]
# addopts = "--jaxtyping-packages=jaxscape,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP038"]
ignore-init-module-imports = true
select = ["E", "F", "I001", "UP"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false
